step1/2-3(scheduler)/FIX_LINE_838.txt
================================================================================
                    FIX FOR COMPILATION ERROR ON LINE 838
================================================================================

ERROR:
------
mediator.c:838:13: error: unknown type name 'emove'
             emove newline
             ^

PROBLEM:
--------
On Dom0, line 838 is missing the comment marker "//" at the beginning.
The line shows: "emove newline" instead of "// Remove newline"

SOLUTION:
---------
On Dom0, line 838 should be:
            // Remove newline

NOT:
            emove newline

QUICK FIX:
----------
On Dom0, edit line 838:
1. Open mediator.c: nano mediator.c
2. Go to line 838: Press Ctrl+_ then type 838
3. Change: "emove newline" to "// Remove newline"
4. Save: Ctrl+O, Enter, Ctrl+X

OR copy the correct line from workspace file:
Line 838 should be exactly:
            // Remove newline

================================================================================
End of Fix
================================================================================
